[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yod"
dynamic = ["version"]
description = "Official Python SDK for the Yod personal memory assistant API"
readme = "README.md"
license = { file = "LICENSE" }
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Yod", email = "support@yod.agames.ai" }
]
keywords = ["yod", "memory", "ai", "assistant", "sdk", "api", "personal-assistant", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://yod.agames.ai"
Documentation = "https://docs.yod.agames.ai/sdk/python"
Repository = "https://github.com/agames-live/yod-python"
Changelog = "https://github.com/agames-live/yod-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/yod/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/yod"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
